--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About Siggy The Exercise</title>
+        <title>About Siggy The Exercise - Take Two</title>
     </head>
     <body>
 
