--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                 Siggy the Kitty
             </span> 
             <p>
-                Siggy is a kitty that lives with Ishrat Lallmamode. He only has one brain cell but it's okay he's really cute.
+                The Siggy is a kitty that lives with Ishrat Lallmamode. He only has one brain cell but it's okay he's really cute.
             </p>
         </header> 
         <nav>
