--- a/complexityGame/index.html
+++ b/complexityGame/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>What Type of Project Am I?</title>
+    <title>What The Scaffold?</title>
     <script href="quiz.js"></script>
     <style>
         body {
@@ -137,7 +137,7 @@
 
     <main>
 
-        <div id="header">What Project Am I?</div>
+        <div id="header">What the Scaffold?</div>
 
         <section id="description">
             <p>The goal of this mini-quiz game is to determine what type of project your dashboard is.</p>
