--- a/complexityGame/index.html
+++ b/complexityGame/index.html
@@ -149,7 +149,7 @@
             <h3>Question #1: Do you know why you're building?</h3>
             <p>Do you have a set goal for your project?</p>
             <div class="buttonGroup">
-                <button id="1" onclick="addValue(0, 'one', this)">We don't even know where to begin</button>
+                <button id="1" onclick="getResults()">We don't even know where to begin</button>
                 <button id="2" onclick="addValue(1, 'one', this)">Clear goals, clear outcomes</button>
                 <button  id="3" onclick="addValue(2, 'one', this)">We have a question we want to answer</button>
                 <button id="4" onclick="addValue(3, 'one', this)">We have an overall objective</button>
