--- a/complexityGame/index.html
+++ b/complexityGame/index.html
@@ -18,6 +18,8 @@
 
         }
 
+        // each section is a question 
+
         section {
             width: inherit;
             background: #FFC627;
@@ -33,6 +35,7 @@
         }
 
 
+        // this puts together the answers in a group so that is consistent throughout the whole application 
 
         .buttonGroup {
             display: grid;
@@ -217,13 +220,18 @@
     <script>
         let score = 0;
 
+        // add value to this score that's a global variable. 
+
         function addValue(val, section, id) {
+            // when someone selects their value, it differentiates it from the rest of them. 
             id.style.backgroundColor = "transparent"
             id.style.border = "2px solid black"
             id.style.color = "black"
             let block = "block"
             score = score + val;
             console.log(score)
+
+            // because i want sections to show up individually instead of, we need some mechanism to switch the dom to make each other section visible 
             switch (section) {
                 case "one":
                     document.getElementById("two").style.display = block;
@@ -240,6 +248,8 @@
                 case "five":
                     document.getElementById("submit").style.display = block; 
                     break;
+
+                    //error handling 
                 default:
                     console.log("uhoh something broke")
 
@@ -248,7 +258,9 @@
 
         }
 
-    
+
+        // this function now takes the results, and uses the extremes as boundaries for each tier 
+        
         function getResults(){
             let submit = document.getElementById("submit")
             submit.style.display  = "none"
@@ -272,6 +284,7 @@
                 results.innerHTML = "<h1>You're Building a Spider Web!</h1><p>You have a mission statement, and it's up to you to determine:</p> <ul><li>What you're building</li><li>You know what you don't know, and you're working with your partners and stakeholders to engage others to learn more</li><li>What the end user finds valuable</li><li>How you're going to deliver it (dashboard, workshop etc...)</li><li>What data you're going to deliver</li><li>What data sources have that data</li></ul> <button onclick=(location.reload())>Play Again?</button>"          
             }
 
+                // error handling bc math is not my best suit 
             else{
                 results.innerHTML = "something went wrong"
             }
