comment broke the CSS

--- a/complexityGame/index.html
+++ b/complexityGame/index.html
@@ -17,7 +17,7 @@
 
         }
 
-        // each section is a question 
+        /* each section is a question */
 
         section {
             width: inherit;
