found another one

--- a/complexityGame/index.html
+++ b/complexityGame/index.html
@@ -34,7 +34,7 @@
         }
 
 
-        // this puts together the answers in a group so that is consistent throughout the whole application 
+        /* this puts together the answers in a group so that is consistent throughout the whole application */
 
         .buttonGroup {
             display: grid;
