--- a/AME220/index.html
+++ b/AME220/index.html
@@ -11,6 +11,12 @@
     </style>
 </head>
 <body>
-    hi there! you're probably here from the syllabus. this page will be updated before the beginning of the quarter. until then, 
+    hi there! you're probably here from the syllabus. this page will be updated before the beginning of the quarter. until then, <a href="https://github.com/asu-ishrat/asu-ishrat.github.io/blob/main/AME220/AME220%20Syllabus.pdf">check out the syllabus - er - again!</a>
+
+    <p>check if you have the necessary materials ready:</p>
+    <ul>
+        <li>a github for students account</li>
+        <li>figma for education account</li>
+    </ul>
 </body>
 </html>
