--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     welcome! you're probably here for <a href="./AME220/">AME 220</a>. this is a landing page for all courses i happen to teach. i'll eventually style this page. eventually. 
+
+    <p>I made this change in lecture!</p>
 </body>
 </html>
