--- a/AME220/index.html
+++ b/AME220/index.html
@@ -1,22 +1,19 @@
+<!-- DOCTYPE tells the browser what to expect -->
 <!DOCTYPE html>
+<!--THIS ELEMENT IS OUR ROOT ELEMENT-->
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ame 220</title>
-    <style>
-        body { 
-            font-family: Arial;
-        }
-    </style>
-</head>
-<body>
-    hi there! you're probably here from the syllabus. this page will be updated before the beginning of the quarter. until then, <a href="https://github.com/asu-ishrat/asu-ishrat.github.io/blob/main/AME220/AME220%20Syllabus.pdf">check out the syllabus - er - again!</a>
 
-    <p>check if you have the necessary materials ready:</p>
-    <ul>
-        <li>a github for students account</li>
-        <li>figma for education account</li>
-    </ul>
+<head>
+    <title>AME 220</title>
+</head>
+
+<body>
+
+   <h1 class="header" style="background-color: darkgrey;"><p>hi i'm a header</p>
+<p class="underline" style="text-decoration: underline;">hi i'm underlined</p>
+<p id="blue" style="color: blue;">hi i'm blue</p>
+<p id="italic" style="font-style: italic;">hi i'm italic</p></h1>
+
 </body>
+
 </html>
