Updated for VSCode

--- a/AME220/index.html
+++ b/AME220/index.html
@@ -4,19 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ame 220</title>
-    <style>
-        body { 
-            font-family: Arial;
-        }
-    </style>
 </head>
 <body>
-    hi there! you're probably here from the syllabus. this page will be updated before the beginning of the quarter. until then, <a href="https://github.com/asu-ishrat/asu-ishrat.github.io/blob/main/AME220/AME220%20Syllabus.pdf">check out the syllabus - er - again!</a>
-
-    <p>check if you have the necessary materials ready:</p>
+    <!--NAVIGATION BEGIN-->
+  <nav class="navStyle" style="background-color: #EF8354;">
     <ul>
-        <li>a github for students account</li>
-        <li>figma for education account</li>
+        <li><a href="#about">about</a></li>
+        <li><a href="#lessons">lessons</a></li>
+        <li><a href="#examples">examples</a></li>
+        <li><a href="https://ame.asu.edu" target="_blank"> of arts media and engineering</a></li>
     </ul>
+  </nav>
+<!--NAVIGATION END-->
+
+<header id="heading" style="color: #EF8354; font-size: 96px;">well, hello there!</header>
+
+<section class="description" id="about">
+    <h1>about the class</h1>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+</section>
+
+<section class="description" id="lessons">
+    <h1>lessons</h1>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+</section>
+
+<section class="description" id="examples">
+    <h1>examples</h1>
+    <ul>
+        <li><a href="./midterm/">MIDTERM EXAMPLES</a></li>
+        <li><a href="./dom-example/">JAVASCRIPT EXAMPLE</a></li>
+        <li><a href="./220-final/">EXAMPLE FOR FINAL</a></li>
+        <li><a href="https://github.com/asu-ishrat/asu-ishrat.github.io/tree/main/AME220" target="_blank">GITHUB FOR SOURCE CODE AND OTHER INFO</a>
+    </ul>
+</section>
+
+
+
 </body>
 </html>
