showcasing how to update a file in VSCode

--- a/AME220/index.html
+++ b/AME220/index.html
@@ -21,6 +21,7 @@
     <ul>
         <li>a github for students account</li>
         <li>figma for education account</li>
+        <li>update for this file</li>
     </ul>
 </body>
 
