--- a/radioactivity/index.html
+++ b/radioactivity/index.html
@@ -40,8 +40,8 @@
     </div>
 
     <script>
-        var warVal = 50;
-        var favorVal = 50; 
+        var warVal = 50*1.1;
+        var favorVal = 50*1.05; 
         var costVal = 100; 
         var earningsVal = 5; 
 
@@ -62,6 +62,8 @@
             graph(); 
 
         }
+
+        // 
 
         function graph() {
             // Data retrieved from https://fas.org/issues/nuclear-weapons/status-world-nuclear-forces/
