--- a/radioactivity/index.html
+++ b/radioactivity/index.html
@@ -40,9 +40,9 @@
     </div>
 
     <script>
-        var warVal = 50*1.1;
-        var favorVal = 50*1.05; 
-        var costVal = 100; 
+        var warVal = 60;
+        var favorVal = 30; 
+        var costVal = 105; 
         var earningsVal = 5; 
 
 
