--- a/AME220/index.html
+++ b/AME220/index.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--used https://favicon.io/favicon-generator/ to generate assets and base code-->
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=DM+Serif+Display:ital@0;1&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
-    <title>ame 220</title>
+    <title>AME 220 Homepage</title>
+
 </head>
 
 <body>
@@ -20,29 +23,32 @@
             <li><a href="#about">about</a></li>
             <li><a href="#lessons">lessons</a></li>
             <li><a href="#examples">examples</a></li>
-            <li><a href="https://ame.asu.edu" target="_blank"> of arts media and engineering</a></li>
+            <li><a href="https://ame.asu.edu" target="_blank"> school of arts media and engineering</a></li>
         </ul>
     </nav>
     <!--NAVIGATION END-->
 
-    <header id="heading">well, hello there!</header>
+    <header id="heading">welcome to ame 220</header>
 
     <section class="description" id="about">
         <h1>about the class</h1>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+    
+        <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
         pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
         laborum.
+        <br/><strong>Strong</strong>
+        <i>Italic</i></div>
     </section>
 
     <section class="description" id="lessons">
         <h1>lessons</h1>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
         pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum.
+        laborum.</div>
     </section>
 
     <section class="description" id="examples">
