--- a/AME220/index.html
+++ b/AME220/index.html
@@ -11,6 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=DM+Serif+Display:ital@0;1&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
     <link rel="stylesheet" href="./styles.css">
     <title>AME 220 Homepage</title>
 
@@ -19,48 +20,61 @@
 <body>
     <!--NAVIGATION BEGIN-->
     <nav class="navStyle">
+       <div id="menu"><span class="material-symbols-outlined">
+            menu
+            </span></div>
         <ul>
             <li><a href="#about">about</a></li>
             <li><a href="#lessons">lessons</a></li>
             <li><a href="#examples">examples</a></li>
-            <li><a href="https://ame.asu.edu" target="_blank"> school of arts media and engineering</a></li>
+            <li><a href="https://ame.asu.edu" target="_blank">ame</a></li>
         </ul>
     </nav>
     <!--NAVIGATION END-->
 
-    <header id="heading">welcome to ame 220</header>
+    <div class="container-content">
+        <header id="heading">welcome to ame 220</header>
 
-    <section class="description" id="about">
-        <h1>about the class</h1>
-    
-        <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum.
-        <br/><strong>Strong</strong>
-        <i>Italic</i></div>
-    </section>
+        <section class="description" id="about">
+            <h1>about the class</h1>
 
-    <section class="description" id="lessons">
-        <h1>lessons</h1>
-        <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum.</div>
-    </section>
+            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore
+                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+                id est
+                laborum.
+                <br /><strong>Strong</strong>
+                <i>Italic</i>
+            </div>
+        </section>
 
-    <section class="description" id="examples">
-        <h1>examples</h1>
-        <ul>
-            <li><a href="./midterm/">MIDTERM EXAMPLES</a></li>
-            <li><a href="./dom-example/">JAVASCRIPT EXAMPLE</a></li>
-            <li><a href="./220-final/">EXAMPLE FOR FINAL</a></li>
-            <li><a href="https://github.com/asu-ishrat/asu-ishrat.github.io/tree/main/AME220" target="_blank">GITHUB FOR
-                    SOURCE CODE AND OTHER INFO</a>
-        </ul>
-    </section>
+        <section class="description" id="lessons">
+            <h1>lessons</h1>
+            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore
+                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+                id est
+                laborum.</div>
+        </section>
+
+        <section class="description" id="examples">
+            <h1>examples</h1>
+            <ul>
+                <li><a href="./midterm/">MIDTERM EXAMPLES</a></li>
+                <li><a href="./dom-example/">JAVASCRIPT EXAMPLE</a></li>
+                <li><a href="./220-final/">EXAMPLE FOR FINAL</a></li>
+                <li><a href="https://github.com/asu-ishrat/asu-ishrat.github.io/tree/main/AME220" target="_blank">GITHUB
+                        FOR
+                        SOURCE CODE AND OTHER INFO</a>
+            </ul>
+        </section>
+    </div>
 </body>
 
 </html>
