just updated for the week 5 homework

--- a/AME220/index.html
+++ b/AME220/index.html
@@ -19,10 +19,12 @@
 
 <body>
     <!--NAVIGATION BEGIN-->
+    <div id="menu"><span class="material-symbols-outlined" onClick="hideBar(document.getElementsByClassName('navStyle')[0])">
+        menu
+        </span></div>
+
     <nav class="navStyle">
-       <div id="menu"><span class="material-symbols-outlined">
-            menu
-            </span></div>
+        
         <ul>
             <li><a href="#about">about</a></li>
             <li><a href="#lessons">lessons</a></li>
@@ -75,6 +77,8 @@
             </ul>
         </section>
     </div>
+
+
 </body>
 
 </html>
