--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASU ISHRAT</title>
+    <title>live html lesson</title>
 </head>
 <body>
-    welcome! you're probably here for <a href="./AME220/">AME 220</a>. this is a landing page for all courses i happen to teach. i'll eventually style this page. eventually. 
-
-    <p>I made this change in lecture!</p>
-    <p>I made this change to showcase Git in VSCode!</p>
+    <h1>Hello!!!</h1>
 </body>
 </html>
