Fixed the width issue

--- a/AME220/week3-homework/index.html
+++ b/AME220/week3-homework/index.html
@@ -264,6 +264,10 @@ text-transform: uppercase;
     grid-template: 100% 100% 100% 100% 100%/100%;
 }
 
+.cards > div {
+    width: 100%;
+}
+
 .cards > div:nth-child(even) {
     border-radius: 0px;
 }
