--- a/complexityGame/index.html
+++ b/complexityGame/index.html
@@ -21,7 +21,7 @@
 
         section {
             width: inherit;
-            background-color: #FFC627;
+            background: #FFC627;
             color: black;
             border-radius: 15px;
             border: 0px solid;
